[package]
name = "blinking_led"
version = "0.1.0"
authors = ["Kyrylo Stepanov <kyrylo.stepanov@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
stm32f407g-disc = "0.4.0"
cortex-m = "0.6.3"
cortex-m-rt = "0.6.3"
# Panic behaviour, see https://crates.io/keywords/panic-impl for alternatives
panic-halt = "0.2"
